@startuml
title Diagramme de classes MVP — ConfianceFmap

class User {
  +UUID id
  +String email
  +String hashed_password
  +Role role  -- admin, quality, producer, client
  +Timestamp created_at
}

class Project {
  +UUID id
  +String name
  +UUID client_id  -- FK vers User (client)
  +Timestamp created_at
}

class Delivery {
  +UUID id
  +UUID project_id
  +String title
  +String description
  +String status
  +UUID issuer_id  -- FK vers User (interne)
  +Timestamp created_at
}

class File {
  +UUID id
  +String storage_key
  +String filename
  +UUID delivery_id (nullable)
  +UUID nce_id (nullable)
  +Boolean is_receipt  -- true si c'est un accusé de réception
  +Timestamp created_at
}

class Survey {
  +UUID id
  +UUID delivery_id (nullable)
  +SurveyType type  -- NPS, CSAT
  +SmallInt score
  +UUID respondent_id (nullable)
  +Timestamp responded_at
}

class NCE {
  +UUID id
  +UUID delivery_id
  +String title
  +Text description
  +String category
  +Severity severity
  +Status status
  +UUID reporter_id (nullable)  -- FK vers User (client)
  +Timestamp created_at
}

class EmailToken {
  +UUID id
  +String token
  +UUID user_id (nullable)
  +Purpose purpose  -- view_delivery, respond_survey, create_nce
  +UUID resource_id (nullable)
  +Timestamp expires_at
}

class Notification {
  +UUID id
  +String type
  +String title
  +Text message
  +Boolean via_email
  +String recipient_ids  -- JSON ou ARRAY pour multi-dest.
  +Timestamp created_at
}

class AuditLog {
  +UUID id
  +String entity
  +UUID entity_id (nullable)
  +String action
  +UUID actor_id (nullable)
  +JSONB details
  +Timestamp created_at
}

' --- Associations ---
User "1" -- "0..*" Project : client
User "1" -- "0..*" Delivery : issuer
Project "1" -- "0..*" Delivery : contient
Delivery "1" -- "0..*" File : fichiers
Delivery "1" -- "0..*" Survey : sondages
Delivery "1" -- "0..*" NCE : non-conformités
User "1" -- "0..*" Notification : possède
User "1" -- "0..*" AuditLog : agit
User "1" -- "0..*" EmailToken : possède

@enduml
